# lab5

./: README.md
lab5/: CMakeLists.txt  sqlite.db
lab5/include/: client.h  dbEditor.h  server.h
lab5/include2/: client.h
lab5/src/: dbEditor.cpp  main.cpp  main_server.cpp  server.cpp
lab5/src2/: main.cpp
lab5/test/: main.cpp  main_test.cpp  result.txt
